--- a/desafio-triângulo.html
+++ b/desafio-triângulo.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="reset.css"> 
+    <link rel="stylesheet" href="desafio-triangulo.css">
+
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="desaffio-triangulo.js"></a></li>
-        </ul>
-    </nav>
+    <h1>Calculando Triângulos</h1>
+    <h3>Coloque os valores do seu triangulo para calcular se seu triângulo é:</h3>
+    <ul>
+        <li>isosceles</li>
+        <li>escalêno</li>
+        <li>equilátero</li>
+    </ul>
+       
 
     <form action="">
     <label for="ladoA">lado A:</label>
