--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+
+    <nav>
+        <ul>
+           <button href="desaffio-triangulo.js">Desafio triÂngulo</button>
+            <li><a href="desconto.html"></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </nav>
     <h1>Programinhas</h1>
     <!-- TODO: eliminar esses botões -->
     <button type="button" onclick="calculaIMC()">Calculadora IMC</button>
