--- a/futebol.html
+++ b/futebol.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="futebol.js">
+    <link rel="stylesheet" href="futebol.css">
 </head>
 <body>
     
