--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <nav>
         <ul>
-           <button href="desaffio-triangulo.js">Desafio triÂngulo</button>
-            <li><a href="desconto.html"></a></li>
+           <li><a href="desaffio-triangulo.js">Desafio triÂngulo</a></li>
+            <li><a href="desconto.html">desconto</a></li>
             <li><a href=""></a></li>
         </ul>
     </nav>
