--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 
     <nav>
         <ul>
-           <li><a href="desaffio-triangulo.js">Desafio triÂngulo</a></li>
-            <li><a href="desconto.html">desconto</a></li>
-            <li><a href=""></a></li>
+           <button><a href="desafio-triângulo.html">Desafio triângulo</a></button>
+            <button><a href="desconto.html">desconto</a></button>
+            <button><a href="futebol.html">futebol</a></button>
+            <button><a href="nome.html">desafio-nomes</a></button>
         </ul>
     </nav>
     <h1>Programinhas</h1>
     <!-- TODO: eliminar esses botões -->
-    <button type="button" onclick="calculaIMC()">Calculadora IMC</button>
-    <button type="button" onclick="converteTemperatura()">Conversor Temperatura</button>
+    
 
     <h2>Calculadora de IMC</h2>
 
