--- a/nome.html
+++ b/nome.html
@@ -81,6 +81,7 @@
 
 
     })
+    
 
     // TODO:
     // 1. ao clicar em cadastrar, limpar o input
@@ -89,6 +90,7 @@
     // 4. exibir se o nome foi encontrado 
 
   </script>
+  <img src="celular.jpg">
 </body>
 
 </html>
