--- a/desconto.html
+++ b/desconto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<link rel="stylesheet" href="desafio.css">
+<link rel="stylesheet" href="css/desafio.css">
 
 <body>
     <form action="">
