--- a/futebol.html
+++ b/futebol.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="futebol.js">
-    <link rel="stylesheet" href="futebol.css">
+    <link rel="stylesheet" href="css/futebol.css">
 </head>
 <body>
     <h1>Faça sua simulação do campeonato paulista!!!</h1>
