--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
+    
 
     <nav>
         <ul>
@@ -99,5 +100,7 @@
                 document.querySelector('#resultadotemperatura').innerHTML = "";
                 });
                 </script>
+
+                
 </body>
 </html>
