--- a/gasolina.html
+++ b/gasolina.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="gasolina.js">
 </head>
 <body>
-    <input type="number">
+    <input type="text" id="combustivel">
+    <input type="number" id="quantidade">
+
+    <button type="reset">resetar</button>
+    <button type="button"></button>
     
 </body>
 </html>
