--- a/gasolina.html
+++ b/gasolina.html
@@ -8,11 +8,21 @@
     <link rel="stylesheet" href="gasolina.js">
 </head>
 <body>
+    <select id="tpcombustivel">
+        <option value="opc1">alcool</option>
+        <option value="opc2">gasolina</option>
+        <option value="opc1"></option>
+    </select>
     <input type="text" id="combustivel">
     <input type="number" id="quantidade">
 
-    <button type="reset">resetar</button>
-    <button type="button"></button>
+    <button type="reset" id="btreset">resetar</button>
+    <button type="button" id="calcgas">comprar gasolina</button>
+    <script>
+        document.querySelector('calcgas').addEventListener('click' function(){
+        const cliente = parseFloat(document.querySelector())
+        })
+    </script>
     
 </body>
 </html>
