--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafios e Exercícios</title>
+    
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/navbar.css">
+
 </head>
 <body>
     <header>
@@ -129,7 +130,7 @@
                 document.querySelector('#resultadotemperatura').innerHTML = "";
                 });
                 </script> -->
-
                 
+                <script src="/js/navbar.js"></script>
 </body>
 </html>
