--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/desafio-triangulo.css">
 
 </head>
 <body>
