style:estilizando a pagina inicial

--- a/Exercicios/desconto.html
+++ b/Exercicios/desconto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<link rel="stylesheet" href="css/desafio.css">
+<link rel="stylesheet" href="/css/desafio.css">
 
 <body>
     <form action="">
@@ -14,8 +14,8 @@
 
         <h3>Venha nos visitar no nosso museu que conta com vários artigos históricos, para você se divertir com sua família!!!!</h3>
         
-        <img src="Museu_do_Ipiranga.jpg">
-        <img src="museu-do-ipiranga2.jpg">
+        <img src="/img/Museu_do_Ipiranga.jpg">
+        <img src="/img/museu-do-ipiranga2.jpg">
         <h5>preço do ingresso:R$100,00</h5>
 
         
