--- a/Exercicios/gasolina.html
+++ b/Exercicios/gasolina.html
@@ -19,8 +19,10 @@
     <button type="reset" id="btreset">resetar</button>
     <button type="button" id="calcgas">comprar gasolina</button>
     <script>
-        document.querySelector('calcgas').addEventListener('click' function(){
-        const cliente = parseFloat(document.querySelector())
+        document.querySelector('calcgas').addEventListener('click',function(){
+        const cliente = parseFloat(document.querySelector('a').value)
+        const client =parseFloat(document.querySelector('g').value )
+
         })
     </script>
     
