--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
     <header>
         <div class="logo-menu">
 
-            <div class="logo">
-                <span>Desafios & Exercícios</span>
-            </div>
+            <div class="logo"> </div>
             
             <nav class="menu-navegacao">
-                <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/exercicios/exercicio1.html">Exerc. 1</a></li>
-                    <li><a href="/exercicios/exercicio6.html">Exerc. 6</a></li>
-                </ul>
-            </nav>
+                <!-- <ul>
+                    <- <li><a href="/index.html">Home</a></li> -->
+                    <!-- <li><a href="/exercicios/exercicio1.html">Exerc. 1</a></li> -->
+                    <!-- <li><a href="/exercicios/exercicio6.html">Exerc. 6</a></li> -->
+                <!-- </ul> -->
+            </nav> 
         </div>
     
         <div class="breadcrumbs"></div>
