--- a/Exercicios/desafio-triângulo.html
+++ b/Exercicios/desafio-triângulo.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="reset.css"> 
-    <link rel="stylesheet" href="css/desafio-triangulo.css">
-
+    <link rel="stylesheet" href="/css/desafio-triangulo.css">
+    
 </head>
 <body>
     <h1>Calculando Triângulos</h1>
