--- a/Exercicios/nome.html
+++ b/Exercicios/nome.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="css/nome.css">
+  <link rel="stylesheet" href="/css/nome.css">
 </head>
 
 <body>
@@ -96,7 +96,7 @@
     // 4. exibir se o nome foi encontrado 
     
     </script>
-  <img src="celular.jpg">
+  <img src="/img/celular.jpg">
 </div>
 </body>
 
